# melony

./: .gitignore  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  add_task.py  consumer.py  consumer2.py  dev_async_consumer.py  dev_cron_consumer.py  dev_publish_tasks.py  dev_sync_consumer.py  dev_tasks.py  main.py  main_another.py  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml
melony/: __init__.py  logger.py
melony/brokers/: mock.py  mock_broker.py  redis.py  redis_broker.py
melony/consumers/: mock_consumer.py  redis_consumer.py
melony/core/: brokers.py  cli.py  consts.py  consumers.py  cron_consumers.py  cron_tasks.py  dto.py  finders.py  json_task_converter.py  publishers.py  result_backend.py  result_backends.py  task_converters.py  task_executor.py  task_finders.py  task_wrappers.py  tasks.py
melony/publishers/: redis_publisher.py
melony/redis_broker/: brokers.py  consumers.py  cron_consumers.py  publishers.py  result_backends.py
melony/result_backends/: redis_result_backend.py
melony/task_converters/: json_ser_obj_task_converter.py  json_task_converter.py
pkg_example/async_pkg/: tasks.py
pkg_example/other_pkg/: tasks.py
pkg_example/sync_pkg/: tasks.py
tests/: test_cli.py  test_consumers.py  test_finders.py  test_logger.py  test_task_converters.py  test_task_executor.py  test_task_finders.py  test_task_wrappers.py  test_tasks.py
tests/cron/: test_cron_consumers.py  (+1 more)
usage/: docker-compose.yml  example.py
(+14 files in other folders)
